:feat: default CV

--- a/index.html
+++ b/index.html
@@ -1,12 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>George Kartavenko CV</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed at commodi, sunt vitae in mollitia officiis asperiores possimus consequuntur labore?
+    <header>
+        <h1>George Kartavenko</h1>
+        <img src="./myPhoto.jpg" alt="photo" title="photo">
+    </header>
+    <main>
+        <section id="contact">
+            <h2>Contact Information</h2>
+            <p><strong>Phone:</strong> +375 (29) 726-54-47</p>
+            <p><strong>Email:</strong> <a href="mailto:SocialImp@mail.ru">SocialImp@mail.ru</a></p>
+            <p><strong>Discord:</strong> @George-RB</p>
+        </section>
+        <section id="goals">
+            <h2>My Goals</h2>
+            <p>I want to become a skilled developer at EPAM, focusing on continuous learning and contribution to
+                cutting-edge projects. My goal is to leverage my programming knowledge and grow professionally in a
+                dynamic environment.</p>
+        </section>
+        <section id="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>Programming Languages: JavaScript, CSS, HTML</li>
+                <li>Version Control: Git</li>
+                <li>Development Tools: VSCode, GitHub</li>
+            </ul>
+        </section>
+        <section id="code">
+            <h2>Code Examples</h2>
+            <pre>
+                <code>
+function multiply(a, b) {
+  return a * b;
+}
+                </code>
+            </pre>
+        </section>
+        <section id="experience">
+            <h2>Work Experience</h2>
+            <p>Currently, I do not have professional work experience. However, I have completed several academic
+                projects and am eager to apply my knowledge in a real-world setting.</p>
+        </section>
+        <section id="education">
+            <h2>Education</h2>
+            <article>
+                <h3>Mozyr State Pedagogical University named after I.P. Shamyakin</h3>
+                <p><strong>Specialization:</strong> Applied Mathematics</p>
+                <p><strong>Years:</strong> 2011 - 2016</p>
+            </article>
+        </section>
+        <section id="additional-info">
+            <h2>Additional Information</h2>
+            <p>I am highly motivated and dedicated to continuously improving my skills. I enjoy solving complex problems
+                and am always looking for new challenges. In my free time, I like to contribute to open-source projects
+                and stay updated with the latest trends in web development.</p>
+        </section>
+        <section id="english">
+            <h2>English</h2>
+            <p>My level of English is A2, and I am actively working on improving my proficiency through courses and
+                self-study.</p>
+        </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <article>
+                <h3>CV Project</h3>
+                <p><strong>Description:</strong> Developed this CV to showcase my skills and knowledge.</p>
+                <p><strong>Technologies:</strong> Markdown, HTML, CSS</p>
+                <p><strong>GitHub Link:</strong> <a
+                        href="https://github.com/George-RB/rsschool-cv/blob/main/CV.md">CV Project</a></p>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 <a href="https://github.com/George-RB">George-RB</a></p>
+        <a href="https://rs.school/courses/javascript-ru"><img src="./logo.svg" alt="Course Logo"></a>
+    </footer>
 </body>
+
 </html>
